# latinitas

./: Makefile.am  README.md  config.h.in  configure.ac
include/la/: accidence.h  char.h  form.h  word.h
src/: Makefile.am
src/language/: accidence.c  char.c  form.c  word.c
tests/: Makefile.am  check_accidence.c  check_form.c
